--- a/SquaresNStuff/Base.lproj/Main.storyboard
+++ b/SquaresNStuff/Base.lproj/Main.storyboard
@@ -3,6 +3,9 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,12 +20,45 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SpaceShip" translatesAutoresizingMaskIntoConstraints="NO" id="yZ7-MR-axA"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AlbertEinstein" translatesAutoresizingMaskIntoConstraints="NO" id="LG0-aX-V2x">
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="LG0-aX-V2x" secondAttribute="height" multiplier="1:1" id="gOu-e7-rJQ"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Albert Einstein" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ri3-4x-9i7">
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                                <color key="shadowColor" red="0.0" green="0.77565886589999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <size key="shadowOffset" width="2" height="1"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="yZ7-MR-axA" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="53E-DQ-1Q7"/>
+                            <constraint firstItem="LG0-aX-V2x" firstAttribute="top" secondItem="yZ7-MR-axA" secondAttribute="bottom" multiplier="0.75" id="7Na-Dr-gab"/>
+                            <constraint firstItem="LG0-aX-V2x" firstAttribute="height" secondItem="yZ7-MR-axA" secondAttribute="height" multiplier="0.7" id="ZBd-su-BXb"/>
+                            <constraint firstItem="yZ7-MR-axA" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.25" id="f6M-Dg-Jug"/>
+                            <constraint firstItem="yZ7-MR-axA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="hRy-Q7-pzL"/>
+                            <constraint firstItem="ri3-4x-9i7" firstAttribute="top" secondItem="LG0-aX-V2x" secondAttribute="bottom" constant="8" id="k1h-pu-wuf"/>
+                            <constraint firstItem="ri3-4x-9i7" firstAttribute="centerX" secondItem="LG0-aX-V2x" secondAttribute="centerX" id="oiW-I5-SNy"/>
+                            <constraint firstItem="LG0-aX-V2x" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pBb-dI-e1n"/>
+                            <constraint firstItem="yZ7-MR-axA" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="tjG-qP-E5C"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="profileImageView" destination="LG0-aX-V2x" id="5WI-F6-nNE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="399.19999999999999" y="388.15592203898052"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="AlbertEinstein" width="300" height="320"/>
+        <image name="SpaceShip" width="900" height="563"/>
+    </resources>
 </document>
